--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ categories = ["caching", "filesystem", "memory-management"]
 keywords = ["file", "io", "cache"]
 
 [dependencies]
+freqache = "0.4"
+tokio = { version = "1.11", features = ["rt", "sync"] }
