--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ name = "example"
 
 [dependencies]
 async-trait = "0.1"
-freqache = "0.4"
+freqache = "~0.4.1"
 futures = "0.3"
 tokio = { version = "1.11", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.11", features = ["macros"] }
+tokio = { version = "1.11", features = ["macros", "time"] }
