--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "freqfs"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["haydn@tinychain.net"]
 edition = "2018"
 license = "Apache-2.0"
@@ -18,6 +18,7 @@ name = "example"
 async-trait = "0.1"
 freqache = "~0.4.1"
 futures = "0.3"
+safecast = "~0.1.2"
 tokio = { version = "1.11", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
 
 [dev-dependencies]
