--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "freqfs"
-version = "0.5.3"
+version = "0.5.4"
 authors = ["haydn@tinychain.net"]
-edition = "2018"
+edition = "2021"
 license = "Apache-2.0"
 description = "An in-memory filesystem cache layer over tokio::fs, with LFU eviction"
 repository = "https://github.com/haydnv/freqfs"
@@ -20,8 +20,8 @@ freqache = "~0.4.1"
 futures = "0.3"
 log = "0.4"
 safecast = "~0.1.2"
-tokio = { version = "1.21", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
+tokio = { version = "1.21", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.21", features = ["macros", "time"] }
+tokio = { version = "1.23", features = ["macros", "time"] }
