--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "freqfs"
-version = "0.5.6"
-authors = ["haydn@tinychain.net"]
+version = "0.6.0"
+authors = ["code@tinychain.net"]
 edition = "2021"
 license = "Apache-2.0"
 description = "An in-memory filesystem cache layer over tokio::fs, with LFU eviction"
@@ -16,12 +16,12 @@ name = "example"
 
 [dependencies]
 async-trait = "0.1"
-freqache = "~0.4.1"
+freqache = "0.5"
 futures = "0.3"
 log = "0.4"
-safecast = "~0.1.2"
-tokio = { version = "1.21", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
+safecast = "~0.1.4"
+tokio = { version = "1.24", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.23", features = ["macros", "time"] }
+tokio = { version = "1.24", features = ["macros", "time"] }
