--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,9 @@ ds-ext = { path = "../ds-ext" }
 futures = "0.3"
 log = "0.4"
 safecast = "~0.1.4"
-tokio = { version = "1.24", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
+tokio = { version = "1.25", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
+uuid = "1.3"
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.24", features = ["macros", "time"] }
+tokio = { version = "1.25", features = ["macros", "time"] }
