--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ futures = "0.3"
 log = "0.4"
 safecast = "~0.1.4"
 tokio = { version = "1.25", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
-uuid = "1.3"
+uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
