--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ ds-ext = { path = "../ds-ext" }
 futures = "0.3"
 log = "0.4"
 safecast = "~0.1.4"
-tokio = { version = "1.25", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
+tokio = { version = "1.25", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.25", features = ["macros", "time"] }
+tokio = { version = "1.25", features = ["macros"] }
