--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,22 @@ keywords = ["file", "io", "cache"]
 
 [[example]]
 name = "example"
+required-features = ["stream"]
+
+[features]
+stream = ["bytes", "destream", "tbon", "tokio-util"]
 
 [dependencies]
 async-trait = "0.1"
+bytes = { version = "1.4", optional = true }
+destream = { path = "../destream", optional = true }
 ds-ext = { path = "../ds-ext" }
 futures = "0.3"
 log = "0.4"
 safecast = { path = "../safecast" }
+tbon = { path = "../tbon", features = ["tokio-io"], optional = true }
 tokio = { version = "1.25", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
+tokio-util = { version = "0.7", features = ["io"], optional = true }
 uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
