--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,16 +25,16 @@ stream = ["bytes", "destream", "tbon", "tokio-util"]
 async-trait = "0.1"
 bytes = { version = "1.4", optional = true }
 destream = { version = "0.7", optional = true }
-ds-ext = "0.1"
+ds-ext = { path = "../ds-ext" }
 futures = "0.3"
 hr-id = { version = "0.4", optional = true }
 log = { version = "0.4", optional = true }
 safecast = "0.2"
-tbon = { version = "0.5", features = ["tokio-io"], optional = true }
-tokio = { version = "1.29", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
+tbon = { path = "../tbon", features = ["tokio-io"], optional = true }
+tokio = { version = "1.31", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 tokio-util = { version = "0.7", features = ["io"], optional = true }
 uuid = { version = "1.4", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.29", features = ["macros"] }
+tokio = { version = "1.31", features = ["macros"] }
