--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ stream = ["bytes", "destream", "tbon", "tokio-util"]
 async-trait = "0.1"
 bytes = { version = "1.4", optional = true }
 destream = { version = "0.7", optional = true }
-ds-ext = { path = "../ds-ext" }
+ds-ext = "0.1"
 futures = "0.3"
 hr-id = { version = "0.4", optional = true }
 log = { version = "0.4", optional = true }
