--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ stream = ["bytes", "destream", "tbon", "tokio-util"]
 async-trait = "0.1"
 bytes = { version = "1.5", optional = true }
 destream = { version = "0.7", optional = true }
-ds-ext = { path = "../ds-ext" }
+ds-ext = { version = "~0.1.3" }
 futures = "0.3"
-hr-id = { path = "../hr-id", optional = true }
+hr-id = { version = "0.5", optional = true }
 log = { version = "0.4", optional = true }
 safecast = "0.2"
 tbon = { version = "0.5", features = ["tokio-io"], optional = true }
 tokio = { version = "1.33", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 tokio-util = { version = "0.7", features = ["io"], optional = true }
-uuid = { version = "1.4", features = ["v4"] }
+uuid = { version = "1.5", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
