--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "freqfs"
-version = "0.9.1"
+version = "0.10.0"
 authors = ["code@tinychain.net"]
 edition = "2021"
 license = "Apache-2.0"
@@ -23,18 +23,18 @@ stream = ["bytes", "destream", "tbon", "tokio-util"]
 
 [dependencies]
 async-trait = "0.1"
-bytes = { version = "1.5", optional = true }
-destream = { version = "0.7", optional = true }
-ds-ext = { version = "~0.1.3" }
+bytes = { version = "1.7", optional = true }
+destream = { version = "0.8", optional = true }
+ds-ext = "0.2"
 futures = "0.3"
-hr-id = { version = "0.5", optional = true }
+hr-id = { version = "0.6", optional = true }
 log = { version = "0.4", optional = true }
 safecast = "0.2"
-tbon = { version = "0.5", features = ["tokio-io"], optional = true }
-tokio = { version = "1.35", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
+tbon = { version = "0.6", features = ["tokio-io"], optional = true }
+tokio = { version = "1.39", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
 tokio-util = { version = "0.7", features = ["io"], optional = true }
-uuid = { version = "1.6", features = ["v4"] }
+uuid = { version = "1.10", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
-tokio = { version = "1.35", features = ["macros"] }
+tokio = { version = "1.39", features = ["macros"] }
